EXTRA_DIST = \
	SDLMain.h \
	SDLMain.m \
	SDLMain.nib/designable.nib \
	SDLMain.nib/keyedobjects.nib \
	main.cpp \
	pioneersp-logo.icns \
	pioneersp-logo.png \
	pioneersp.xcodeproj/project.pbxproj \
	pioneersp.xcodeproj/project.xcworkspace/contents.xcworkspacedata \
	pioneersp/en.lproj/Credits.rtf \
	pioneersp/en.lproj/InfoPlist.strings \
	pioneersp/pioneersp-Info.plist \
	pioneersp/pioneersp-Prefix.pch

include $(top_srcdir)/Makefile.common
